// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`web component: MovableView should have right properties 1`] = `
LoadedCheerio {
  "0": <span
    class="class-name touch"
    direction="all"
    style="transform: translate(10px, 10px) scale(2); transition: scale 0.04s, transform 0.04s;"
  >
    hello
  </span>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`web component: MovableView should render correctly 1`] = `
LoadedCheerio {
  "0": <span
    class="touch"
    direction="none"
    style="transform: translate(0px, 0px) scale(1); transition: scale 0.1s, transform 0.1s;"
  />,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
